fix spacing

--- a/style/sekoiaio.scss
+++ b/style/sekoiaio.scss
@@ -324,7 +324,6 @@
             flex-direction: row;
             justify-content: center;
             align-items: flex-start;
-            padding: 40px 0;
 
             a {
                 font-family:'Lost', sans-serif;
